# blank-pkg

./: README.md  blank.py  pyproject.toml
blank_pkg/: cli.py  config.py
blank_pkg/repository/: mirror_update.py
