[tool.poetry]
name = "blank-pkg"
version = "0.1.0"
description = "Yet another simple package manager for Linux written in python"
authors = ["alexeev-prog <alexeev.dev@mail.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.3"
asyncio = "^3.4.3"
requests = "^2.32.3"
aiohttp = "^3.10.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
